Fixed hidden loading indicator behind modals

--- a/frontend/src/less/main.less
+++ b/frontend/src/less/main.less
@@ -37,7 +37,7 @@
     left: 50%;
     margin-top: -16px;
     margin-left: -16px;
-    z-index: 100;
+    z-index: 1060;
     background-color: #ffffff;
     padding: 5px;
 
